frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: msangular
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: msangular
        tier: frontend
        track: stable
    spec:
      containers:
        - name: msangular
          image: "eu.gcr.io/aks-test-307815/msangular:snapshot"
          lifecycle:
            preStop:
              exec:
                command: ["/usr/sbin/nginx","-s","quit"]
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: msangular
    tier: frontend
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  type: LoadBalancer
