gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: "ms"
spec:
  selector:
    matchLabels:
      app: ms
      tier: gateway
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: ms
        tier: gateway
        track: stable
    spec:
      containers:
        - name: msgateway
          imagePullPolicy: Never
          image: "eu.gcr.io/aks-test-307815/msgateway:snapshot"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: "ms"
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: ms
    tier: gateway
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ms-ingress
  namespace: "ms"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: gateway-service
              servicePort: 80
